--- a/SUPERVISOR_HTML/Leaves_request.html
+++ b/SUPERVISOR_HTML/Leaves_request.html
@@ -4,17 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LCMS - Leave Requests</title>
+    <link rel="stylesheet" href="../CSS/Leave_status.css" />
     <link rel="stylesheet" href="../CSS/sidebar.css" />
-    <link rel="stylesheet" href="../CSS/Employee.css" />
+
+    <!-- SweetAlert2 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- SweetAlert Custom CSS -->
+    <link rel="stylesheet" href="../CSS/sweetalert-custom.css" />
+
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+    <!-- Firebase Configuration -->
+    <script src="../js/firebase-init.js"></script>
+    <script src="../js/auth-utils.js"></script>
+
+    <!-- SweetAlert Utility Functions -->
+    <script src="../js/sweetalert-utils.js"></script>
+
+    <!-- Supervisor Leave Manager -->
+    <script src="../js/supervisor-leave-manager.js"></script>
+
+    <!-- Load sidebar script -->
+    <script src="../components/sidebar-loader.js"></script>
+    <script>
+      // Initialize page
+      document.addEventListener("DOMContentLoaded", function () {
+        // Check authentication first
+        checkAuthAndRole("supervisor");
+
+        // Load sidebar
+        loadSidebar("supervisor");
+
+        // Initialize supervisor leave manager and load pending requests
+        const leaveManager = new SupervisorLeaveManager();
+        leaveManager.displayPendingRequests();
+      });
+    </script>
   </head>
   <body>
-    <!-- Sidebar placeholder that will be filled by the JavaScript -->
     <div id="sidebar-placeholder"></div>
 
-    <div class="main-content flex-center">
-      <div class="request-container">
-        <div class="request-title">LEAVE REQUESTS</div>
-        <table class="request-table">
+    <div class="main-content">
+      <div class="status-container">
+        <div class="status-title">EMPLOYEE LEAVE REQUESTS</div>
+        <table class="request-table status-table">
           <thead>
             <tr>
               <th>EMPLOYEE NAME</th>
@@ -30,74 +66,13 @@
           </thead>
           <tbody>
             <tr>
-              <td>John Doe</td>
-              <td>IT Department</td>
-              <td>Vacation Leave</td>
-              <td>2025-06-15</td>
-              <td>2025-06-20</td>
-              <td>5</td>
-              <td>Annual vacation</td>
-              <td><span class="status-badge status-pending">Pending</span></td>
-              <td class="action-buttons">
-                <button class="approve-btn">Approve</button>
-                <button class="reject-btn">Reject</button>
-              </td>
-            </tr>
-            <tr>
-              <td>Jane Smith</td>
-              <td>HR Department</td>
-              <td>Sick Leave</td>
-              <td>2025-06-10</td>
-              <td>2025-06-11</td>
-              <td>2</td>
-              <td>Medical checkup</td>
-              <td><span class="status-badge status-pending">Pending</span></td>
-              <td class="action-buttons">
-                <button class="approve-btn">Approve</button>
-                <button class="reject-btn">Reject</button>
+              <td colspan="9" style="text-align: center; padding: 20px">
+                Loading...
               </td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
-
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const approveButtons = document.querySelectorAll(".approve-btn");
-        const rejectButtons = document.querySelectorAll(".reject-btn");
-
-        approveButtons.forEach((button) => {
-          button.addEventListener("click", function () {
-            const row = this.closest("tr");
-            const statusCell = row.querySelector(".status-badge");
-            statusCell.textContent = "Approved";
-            statusCell.style.backgroundColor = "#c7ecee";
-            statusCell.style.color = "#2c3e50";
-            this.closest(".action-buttons").remove();
-          });
-        });
-
-        rejectButtons.forEach((button) => {
-          button.addEventListener("click", function () {
-            const row = this.closest("tr");
-            const statusCell = row.querySelector(".status-badge");
-            statusCell.textContent = "Rejected";
-            statusCell.style.backgroundColor = "#ff7675";
-            statusCell.style.color = "white";
-            this.closest(".action-buttons").remove();
-          });
-        });
-      });
-    </script>
-
-    <!-- Load sidebar script -->
-    <script src="../components/sidebar-loader.js"></script>
-    <script>
-      // Call the loadSidebar function when the page loads
-      document.addEventListener("DOMContentLoaded", function () {
-        loadSidebar("supervisor");
-      });
-    </script>
   </body>
 </html>
